| Summary: | ASTERISK-28288: Resources (udptl fd) leaking for T.38 calls | ||
| Reporter: | Paulo Vicentini (pvicentini) | Labels: | pjsip |
| Date Opened: | 2019-02-13 07:30:45.000-0600 | Date Closed: | 2019-02-13 10:54:07.000-0600 |
| Priority: | Critical | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.25.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Asterisk 13 | Attachments: | |
| Description: | Resources are leaking (udptl file descriptors) due to unbalanced references for datastore "t38_session_media"
A {code}ao2_ref(datastore, -1) {code} is missing within the create_datastore_session_media function (res/res_pjsip_t38.c) With this patch udptl will no longer leak: Before a T.38 call asterisk 16999 root 10u IPv4 206981 0t0 UDP *:45182 asterisk 16999 root 11u IPv6 206982 0t0 UDP *:50922 asterisk 16999 root 12u IPv6 206087 0t0 UDP *:sip asterisk 16999 root 13u IPv4 206987 0t0 UDP *:sip During T.38 call COMMAND PID USER FD TYPE DEVICE SIZE/OFF NODE NAME asterisk 16999 root 10u IPv4 206981 0t0 UDP *:45182 asterisk 16999 root 11u IPv6 206982 0t0 UDP *:50922 asterisk 16999 root 12u IPv6 206087 0t0 UDP *:sip asterisk 16999 root 13u IPv4 206987 0t0 UDP *:sip asterisk 16999 root 22u IPv6 218819 0t0 UDP *:12622 asterisk 16999 root 23u IPv6 222708 0t0 UDP *:12623 asterisk 16999 root 28u IPv6 223401 0t0 UDP *:11508 asterisk 16999 root 29u IPv6 223406 0t0 UDP *:11509 asterisk 16999 root 32u IPv6 224527 0t0 UDP *:22791 asterisk 16999 root 33u IPv6 224528 0t0 UDP *:21611 T.38 call finished COMMAND PID USER FD TYPE DEVICE SIZE/OFF NODE NAME asterisk 16999 root 10u IPv4 206981 0t0 UDP *:45182 asterisk 16999 root 11u IPv6 206982 0t0 UDP *:50922 asterisk 16999 root 12u IPv6 206087 0t0 UDP *:sip asterisk 16999 root 13u IPv4 206987 0t0 UDP *:sip | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-02-13 07:30:46.200-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2019-02-13 07:41:11.302-0600 Will you be putting this up for review so we can get it merged in and such? By: Paulo Vicentini (pvicentini) 2019-02-13 07:44:58.701-0600 It should be there already now By: Friendly Automation (friendly-automation) 2019-02-13 10:54:08.000-0600 Change 10994 merged by Joshua C. Colp: res/res_pjsip: Resources (udptl fd) are leaking for T.38 calls [https://gerrit.asterisk.org/10994|https://gerrit.asterisk.org/10994] By: Friendly Automation (friendly-automation) 2019-02-13 11:39:57.471-0600 Change 10995 merged by Friendly Automation: res/res_pjsip: Resources (udptl fd) are leaking for T.38 calls [https://gerrit.asterisk.org/10995|https://gerrit.asterisk.org/10995] | ||