res/res_pjsip: Resources (udptl fd) are leaking for T.38 calls

Fix unbalanced references for datastore t38_session_media

ASTERISK-28288

Change-Id: Id6dceceb06651b03f611bf33deb3061022fe5d0c